15.New Locales: CaveGrid, WetCaveGrid
16.Note (coffeemud.ini): I3EMAIL and I3STATE changed to ADMINEMAIL and MUDSTATE
17.CoffeeMud now supports MSSP request at login (not the telnet code version -- kept colliding with mccp in tintin)
18.STAT command now supports titles.
19 Dye now supports light and bright colorings. Various other recipes trickled in here and there.
20.Wand magic words are now from lists.ini -- your players will need to relearn their trigger words.
21.New Scriptable command: MPMONEY, MPHEAL
22.Remorted chars get a single random max stat bonus point, instead of one to everything.
23.CharClasses now support max/caps in common skills, crafting skills, non-crafting common skills, and languages.
24.Injury text is a bit more decorated now. (Thanks gmdenna!)
25.Many many more mxp images scrounged up, and several old ones replaces with better ones.  There is a light at the end of the tunnel!
# Build ? Release ?
1. New Property (From 5.x snippets): Prop_IceBox (thx Robert!)
2. CharStats can now be customized with ADDCHARSTAT_ in coffeemud.ini file.
3. New Commands (From 4.x snippets): Experience, Wealth (thx again Robert)
4. RawMaterial can now be customized with ADDMATERIAL_ in coffeemud.ini file.
5. Wearable can now be customized with ADDWEARLOC_ in coffeemud.ini file.
6. Only Artisan's learn the Master common skills now.  Other classes have their common skill levels lowered.
7. New language: Sign Language
8. New ZapperMask(s): -CHANCE
9. New Property(s): PresenceReaction (for new faction reaction system, etc.)
10.New Mage Spell: Awe Other
11.Factions now have new mob modification system similar to affects/behaviors: reactions
11.New automated MOB reaction system -- see coffeemud.ini under REACTION, and the guide under FACTIONS for more info.
12.Factions now have lots of new triggers: KILL, BRIBE, TALK, MUDCHAT, ARRESTED
13.Faction triggers support parameters; see one of the new faction.ini files for details
