@@ -579,6 +579,9 @@ Example : stat inventory bob\n\r\
 Example : stat questwins bob\n\r\
 Example : stat tattoos bob\n\r\
 Example : stat titles bob\n\r\
+Example : stat scripts bob\n\r\
+Example : stat roomsexplored bob\n\r\
+Example : stat factions bob\n\r\
 Example : stat spell bob\n\r\
 Example : stat skill hassan\n\r\
 Example : stat chant hassan\n\r\
@@ -597,8 +600,10 @@ will list their abilities of that type.  Valid skill types include: SKILL, \
 SPELL, PRAYER, SONG, TRAP, PROPERTY, "THIEF SKILL", LANGUAGE, CHANT, \
 "COMMON SKILL", DISEASE, POISON.  You can also get special reports by \
 entering one of the following before the name: EQUIPMENT, COMBAT, INVENTORY, \
-QUESTWINS, TATTOOS, TITLES
-	
+QUESTWINS, TATTOOS, TITLES, SCRIPTS, WORLDEXPLORED, AREASEXPLORED, ROOMSEXPLORED, \
+FACTIONS
+
+
 SAVE=\
 Command : SAVE\n\r\
 Usage   : SAVE [ROOM, QUESTS, MOBS, ITEMS, USERS]\n\r\
